# dbt-exploration

./: .gitignore  README.md  profiles.yml  pyproject.toml
transformation_project/: dbt_project.yml
transformation_project/models/: schema.yml  sources.yml
transformation_project/models/bronze/deal_union/: deal_union.sql
transformation_project/models/bronze/deal_v2/: deal_v2.sql
transformation_project/models/bronze/login_balance/: login_balance.sql
transformation_project/models/silver/deal_scd_type_2/: deal_scd_type_2.sql
transformation_project/models/silver/deal_silver/: deal_silver.sql
